--- a/youtube.html
+++ b/youtube.html
@@ -18,16 +18,19 @@
           <img class = "youtube-logo" src = "ICONS/youtube-logo.svg">
         </div>
         <div class="middle-section">
-        <input class="search-bar" type="text" placeholder="Search">
+        <input class="search-button" type="text" placeholder="Search">
         <button>
-          <img class = "search-icon" src = "ICONS/search.svg">
+          <img class = "voice-search-button" src = "ICONS/search.svg">
         </button>
         <button>
-          <img class = "voice-icon" src = "ICONS/voice-search-icon.svg">
+          <img class = "voice-search-button" src = "ICONS/voice-search-icon.svg">
         </button>
         </div>
         <div class="right-section">
-        right section
+          <img class="upload-icon" src="icons/upload.svg">
+          <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
+          <img class="notifications-icon" src="icons/notifications.svg">
+          <img class="current-user-picture" src="ICONS/my-channel.jpeg">
         </div>
       </div>
 
