--- a/position.html
+++ b/position.html
@@ -12,10 +12,11 @@
       background-color: black;
       color: white;
       position: fixed;
-      top: 0;
+      top: 0px;
       left: 0;
       right: 0;
       height: 50px;
+      z-index: 1;
     ">header</div>
 
     <div style="
@@ -30,6 +31,15 @@
       sidebar
     </div>
 
+    <div style = "
+      position:absolute;
+      background-color: red;
+      color: white;
+      top: 60px;
+      right: 10px;">
+        absolute
+    </div>
+
     <div style="
       background-color: lightblue;
       height: 200px;
@@ -40,6 +50,7 @@
       background-color: lightpink;
       height: 200px;
       width: 200px;
+      position:relative;
     ">div 2</div>
 
   </body>
