--- a/youtube.html
+++ b/youtube.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="CSS/general.css">
     <link rel="stylesheet" href="CSS/header.css">
     <link rel="stylesheet" href="CSS/video.css">
+    <link rel="stylesheet" href="CSS/sidebar.css">
     </head>
     <body>
       <div class="header">
@@ -18,19 +19,59 @@
           <img class = "youtube-logo" src = "ICONS/youtube-logo.svg">
         </div>
         <div class="middle-section">
-        <input class="search-button" type="text" placeholder="Search">
-        <button>
-          <img class = "voice-search-button" src = "ICONS/search.svg">
+        <input class="search-bar" type="text" placeholder="Search">
+        <button class = "search-button">
+          <img class = "search-icon" src = "ICONS/search.svg">
+          <div class = " tooltip">Search</div>
         </button>
-        <button>
-          <img class = "voice-search-button" src = "ICONS/voice-search-icon.svg">
+        <button class = "voice-search-button">
+          <img class = "voice-search-icon" src = "ICONS/voice-search-icon.svg">
+          <div class = " tooltip">Search with your voice</div>
         </button>
         </div>
         <div class="right-section">
-          <img class="upload-icon" src="icons/upload.svg">
-          <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
-          <img class="notifications-icon" src="icons/notifications.svg">
+          <div class = "upload-icon-container">
+            <img class="upload-icon" src="ICONS/upload.svg">
+            <div class = " tooltip">create</div>
+          </div>
+          <div class = "youtube-apps-icon-container">
+            <img class="youtube-apps-icon" src="ICONS/youtube-apps.svg">
+            <div class = " tooltip">YouTube apps</div>
+          </div>
+          
+          <div class = "notifications-icon-container">
+            <img class="notifications-icon" src="ICONS/notifications.svg">
+            <div class = " tooltip">YouTube apps</div>
+            <div class = "notifications-count">3</div>
+          </div>
+          
           <img class="current-user-picture" src="ICONS/my-channel.jpeg">
+        </div>
+      </div>
+      <div class = "sidebar">
+        <div class = "sidebar-link">
+          <img src = "ICONS/home.svg">
+          <div>Home</div>
+        </div>
+        <div class = "sidebar-link">
+          <img src = "ICONS/explore.svg">
+          <div>Explore</div>
+        </div>
+        <div class = "sidebar-link">
+          <img src = "ICONS/subscriptions.svg">
+          <div>Subscriptions</div>
+        </div>
+        <div class = "sidebar-link">
+          <img src = "ICONS/originals.svg">
+          <div>Originals</div>
+        </div>
+        <div class = "sidebar-link">
+          <img src = "ICONS/youtube-music.svg">
+          <div>YouTube Music</div>
+        </div>
+        <div class = "sidebar-link">
+          <img src = "ICONS/library.svg">
+          <div>Library</div>
         </div>
       </div>
 
@@ -38,6 +79,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-1.webp">
+          <div class = "video-time">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -60,6 +102,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-2.webp">
+          <div class = "video-time">8:22</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -82,6 +125,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-3.webp">
+          <div class = "video-time">9:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -104,6 +148,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-4.webp">
+          <div class = "video-time">22:09</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -126,6 +171,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-5.webp">
+          <div class = "video-time">11:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -148,6 +194,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-6.webp">
+          <div class = "video-time">19:59</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -170,6 +217,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-7.webp">
+          <div class = "video-time">10:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -193,6 +241,7 @@
       <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-8.webp">
+          <div class = "video-time">7:12</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -215,6 +264,7 @@
     <div class="video-preview">
         <div class="thumbnail-row">
           <img class="thumbnail" src="thumbnail/thumbnail-9.webp">
+          <div class = "video-time">13:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
